--- a/dataannotation/datastatistics/versioned_annotations/v2/13_buttercorncup.yaml
+++ b/dataannotation/datastatistics/versioned_annotations/v2/13_buttercorncup.yaml
@@ -89,8 +89,8 @@
     start_time: 405.48416901408456
     step_id: 134
   - description: Extract-Extract lime juice from 1/3 lime
-    end_time: -1.0
-    start_time: -1.0
+    end_time: 680
+    start_time: 610
     step_id: 131
   - description: add-add lime juice to the bowl
     end_time: 677.871
@@ -269,8 +269,8 @@
     start_time: 1028.679511488624
     step_id: 136
   - description: Extract-Extract lime juice from 1/3 lime
-    end_time: -1.0
-    start_time: -1.0
+    end_time: 1301
+    start_time: 1130
     step_id: 131
   - description: add-add lime juice to the bowl
     end_time: 1309.7721686977247
@@ -334,7 +334,7 @@
     start_time: 935.3320144030336
     step_id: 76
 - activity_id: 13
-  is_error: false
+  is_error: true
   recording_id: '13_24'
   step_annotations:
   - description: Measure-Measure 2 cups of frozen corn
@@ -368,11 +368,15 @@
     step_id: 135
   - description: Microwave-Microwave the corn for 3 more minutes
     end_time: -1.0
+    errors:
+      - description: Skipped this step
+        tag: Missing Step
+    modified_description: Skipped this step
     start_time: -1.0
     step_id: 134
   - description: Extract-Extract lime juice from 1/3 lime
-    end_time: -1.0
-    start_time: -1.0
+    end_time: 477
+    start_time: 456
     step_id: 131
   - description: add-add lime juice to the bowl
     end_time: 477.45209223943664
@@ -913,19 +917,16 @@
   - description: stir-then stir the bowl
     end_time: 533.5361468053204
     errors:
-    - description: Step performed before correct order
-      tag: Order Error
+    - description: spill while stirring
+      tag: Technique Error
     start_time: 512.2317520544135
     step_id: 135
   - description: Mix-Mix the contents of the bowl well
     end_time: -1.0
     errors:
-    - description: spill while mixing
-      tag: Technique Error
-    - description: Step performed before correct order
-      tag: Order Error
-    modified_description: Mix-Mix the contents of the bowl well and spill them out
-      while mixing
+      - description: Skipped this step
+        tag: Missing Step
+    modified_description: Skipped this step
     start_time: -1.0
     step_id: 76
   - description: Add-Add 1 teaspoon salt to the bowl
