Finished correcting annotations for recipe: 1

--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/1_microwaveeggsandwich/1_136.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/1_microwaveeggsandwich/1_136.yaml
@@ -15,8 +15,6 @@ step_annotations:
   errors:
   - description: Add 2 eggs instead of 1 egg.
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Pour-Pour 2 eggs into the ramekin cup
   start_time: 49.834
   step_id: 1
@@ -25,7 +23,7 @@ step_annotations:
   errors:
   - description: Instead of 1 Tbsp add 2 Tbsp of cheese.
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed before microwaving and adding salsa
     tag: Order Error
   modified_description: Sprinkle -Sprinkle 2 tablespoon of cheese on cup
   start_time: 159.142
@@ -35,19 +33,16 @@ step_annotations:
   errors:
   - description: Cutting into two uneven pieces.
     tag: Technique Error
-  - description: Step performed after correct order
-    tag: Order Error
   modified_description: Cut -Cut the English muffin into two uneven pieces with a
     knife
   start_time: 262.26800000000003
   step_id: 12
-- description: Microwave -Continue to Microwave for 15-30 more seconds or until the
-    egg is almost set
+- description: Microwave-Microwave the ramekin cup uncovered on high for 30 seconds
   end_time: 413.654
   errors:
   - description: Microwave for less than 15 seconds.
     tag: Timing Error
-  - description: Step performed before correct order
+  - description: Step performed after adding cheese and before initial stirring
     tag: Order Error
   modified_description: Microwave -Microwave for 10 seconds
   start_time: 380.022
@@ -57,55 +52,56 @@ step_annotations:
   errors:
   - description: Add 3 Tbsp of salsa instead of 1 Tbsp
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed after adding cheese and before microwaving enough to set the egg
     tag: Order Error
   modified_description: Top -Top cup with 3 tablespoon of salsa
-  start_time: 404.971
+  start_time: 422
   step_id: 6
-- description: Microwave-Microwave the ramekin cup uncovered on high for 30 seconds
-  end_time: 744.687
-  errors:
-  - description: Microwave more than 30 seconds.
-    tag: Timing Error
-  - description: Step performed after correct order
-    tag: Order Error
-  modified_description: Microwave-Microwave the ramekin cup uncovered on high for
-    1 minute 10 seconds
-  start_time: 561.933
-  step_id: 4
 - description: Line -Line the bottom piece of the English muffin with lettuce
   end_time: 537.882
-  errors:
-  - description: Use unwashed lettuce.
-    tag: Preparation Error
-  - description: Step performed after correct order
-    tag: Order Error
-  modified_description: Line -Line the bottom piece of the English muffin with unwashed
-    lettuce.
   start_time: 470.694
   step_id: 9
-- description: Place -Place the egg from the cup over the lettuce
-  end_time: 774.0831704710033
+- description: Microwave -Continue to Microwave for 15-30 more seconds or until the egg is almost set
+  end_time: 744.687
   errors:
-  - description: Place the egg below the lettuce.
-    tag: Preparation Error
-  - description: did not perform this step  fully and only removed lettuce.
-    tag: Other
-  - description: Step performed before correct order
+  - description: Microwave for 1 minute 10 seconds
+    tag: Timing Error
+  - description: Step performed after adding cheese
     tag: Order Error
-  modified_description: Place -only moved lettuce from top of muffin to place the
-    egg. but egg is not available to place
-  start_time: 586.949
+  - description: The material in microwave is spilled out
+    tag: Preparation Error
+  modified_description: Microwave-Microwave the ramekin cup uncovered on high for 1 minute 10 seconds
+  start_time: 561.933
+  step_id: 4
+- description: Place -Place the egg from the cup over the lettuce
+  end_time: -1
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1
   step_id: 2
 - description: Microwave -Microwave just until cheese melts, about 10 seconds
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 10
 - description: stir-stir the ramekin cup
   end_time: -1.0
+  errors:
+    - description: Skipped this step
+      tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 11
 - description: replace -replace the top of the English muffin
   end_time: -1.0
+  errors:
+    - description: Skipped this step
+      tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 7
